@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.56 1996/12/02 19:12:08 wessels Exp $
+dnl  $Id: configure.in,v 1.57 1996/12/03 00:46:04 wessels Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.56 $)dnl
+AC_REVISION($Revision: 1.57 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(aux)
 
@@ -136,6 +136,7 @@ AC_CHECK_HEADERS( \
 	netdb.h \
 	netinet/in.h \
 	netinet/tcp.h \
+	poll.h \
 	pwd.h \
 	regex.h \
 	resolv.h \
@@ -308,6 +309,7 @@ AC_CHECK_FUNCS(\
 	memcpy \
 	memmove \
 	mktime \
+	poll \
 	pw_encrypt \
 	regcomp \
 	regexec \
